# conan_single_layout

./: LICENSE.md  build.sh
LibA/: CMakeLists.txt  conanfile.py
LibA/cmake/: MyConan.cmake
LibA/include/: LibA.h
LibA/include/MyPackage/: LibASystem.h
LibA/src/: LibA.cpp  LibASystem.cpp
MyExe/: CMakeLists.txt  conanfile.py
MyExe/src/: MyApplication.cpp  MyApplication.h  main.cpp
